# longleaf-af3

./: .gitignore  README.md  config.toml.example  pyproject.toml
docs/: ssh-setup.md
docs/plans/: 2026-03-19-implementation-plan.md  2026-03-19-longleaf-af3-design.md
examples/: modified_protein.json  simple_dimer.json  trimer_with_dna.json
schema/: af3_input.schema.json
src/longleaf_af3/: cli.py  config.py  resources.py  schema.py  submit.py
tests/: test_cli.py  test_config.py  test_resources.py  test_schema.py  test_submit.py
