[project]
name = "longleaf-af3"
version = "0.1.0"
description = "Submit AlphaFold 3 jobs to UNC Longleaf HPC"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23",
    "tomli-w>=1.1",
]

[project.scripts]
af3 = "longleaf_af3.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
